--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="js/slick.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
     <script src="js/jquery.bgswitcher.js"></script>
+    <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 
 <body>
